<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UpdateRecordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/et_generated_id_put"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/generated_id"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/et_name_put"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_salary_put"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/salary"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/et_age_put"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/age"
                    android:imeOptions="actionDone"
                    android:inputType="number" />


                <Button
                    android:id="@+id/btn_update_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@drawable/shape_login"
                    android:text="@string/update_record"
                    android:textColor="@color/white_color"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_update_any_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_large"
                    android:background="@drawable/shape_login"
                    android:text="@string/update_any_field"
                    android:textColor="@color/white_color"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>