<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".activity.UploadFileActivity">

<EditText
    android:id="@+id/et_desc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_large"
    android:hint="@string/description"
    android:inputType="number"/>
<Button
    android:id="@+id/btn_get_img_gallery"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_large"
    android:background="@drawable/shape_login"
    android:text="@string/get_image_from_gallery"
    android:textColor="@color/white_color" />
    <Button
        android:id="@+id/btn_upload_select_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:background="@drawable/shape_login"
        android:text="@string/upload_image"
        android:textColor="@color/white_color" />
</LinearLayout>